# sea-aquaculture-agent

./: .env.example  .gitignore  AGENTS.md  MFPCA_paper.R  Patent_fishi.py  README.md  pyproject.toml  requirements.txt  start.cmd
Data/: surface_data_new_nodof.csv
apps/web/: index.html  package-lock.json  package.json  tailwind.config.js
backend/: app.py  config.py
backend/data/: demo_batches.csv  demo_body_measurements.csv  demo_feeding_records.csv  demo_mortality_records.csv  demo_water_quality.csv
backend/graph/: builder.py  state.py
backend/schemas/: agent.py  batch.py  common.py  production.py
backend/services/: data_service.py  llm_service.py  model_service.py  production_planning_service.py
backend/tests/: test_agent_chat_routing.py  test_batch_profile.py  test_growth_projection.py  test_health.py  test_production_plan_api.py  test_tool_registry.py  test_window_normalization.py
backend/tools/: biomass_tool.py  database_tool.py  feeding_plan_tool.py  growth_model_tool.py  patent_fishi_tool.py  report_writer_tool.py  risk_rule_tool.py  (+3 more)
deploy/: backend.Containerfile  backend.apptainer.def  local_start_frontend.cmd  local_start_frontend.ps1  local_start_frontend.sh  local_tunnel.cmd  local_tunnel.sh  server_logs.sh  server_start_tmux.sh  server_stop_tmux.sh  sync_to_server.sh  tmp_start_sea_aquaculture_frontend.cmd  tmp_start_sea_aquaculture_tunnel.cmd
docs/: API.md  ARCHITECTURE.md  CODEX_TASKS.md  DEPLOYMENT.md  codex_前期生产规划智能体项目开始计划.md  codex_第一期功能范围与执行指令.md  初稿：一种水环境多指标数据的时空场建立与预警方法.docx  初稿：一种深海养殖动态综合监测管理方法及系统.docx
scripts/: smoke_test.sh
(+40 files in other folders)
