[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sea-aquaculture-agent"
version = "0.1.0"
description = "Deep-sea aquaculture production planning agent"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/tests"]
